# Homework1_MyProject

./: CMakeLists.txt  HW1.cpp  Plane.cpp  Plane.h  Q2.cpp  Q2.h  Q7.cpp  Q7.h  Q8.cpp  Q8.h  README.md  main.cpp  q1.cpp  q1.h  question6.cpp  question6.h
